fix toolbar z-index

--- a/src/app/+live-room/audience-tool-bar/audience-tool-bar.component.scss
+++ b/src/app/+live-room/audience-tool-bar/audience-tool-bar.component.scss
@@ -1,6 +1,4 @@
 .audience-tool-bar {
-  position: relative;
-  z-index: 2;
   display: flex;
   height: 50px;
   box-sizing: border-box;
