--- a/src/app/+live-room/editor-tool-bar/editor-tool-bar.component.scss
+++ b/src/app/+live-room/editor-tool-bar/editor-tool-bar.component.scss
@@ -1,6 +1,5 @@
 .editor-tool-bar {
   position: relative;
-  z-index: 2;
   height: 55px;
   box-sizing: border-box;
   border-top: solid 1px rgb(227, 227, 227);
